<resources>
    <string name="app_name">BullBear</string>
    <string name="title_Feed">Feed</string>
    <string name="title_watchlist">Watchlist</string>
    <string name="title_notifications">Notifications</string>
    <string name="add_button">Add button</string>
    <string name="title_activity_do_post">DoPost</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_profile">You</string>
    <string name="title_Post" />
    <string name="feed_text_hint">What do you want to talk about?</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_back">Welcome Back</string>

</resources>